# TrueNasCoreMCP

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CI_CD_FIXED.md  CONTRIBUTING.md  FEATURES.md  INSTALL.md  LICENSE  MANIFEST.in  Makefile  QUICKSTART.md  QUICK_REFERENCE.md  README.md  REPOSITORY_SUMMARY.md  SECURITY.md  SETUP_FIX_SUMMARY.md  URL_UPDATE_SUMMARY.md  claude_config_example.json  claude_desktop_config_direct.json  examples.py  mkdocs.yml  pyproject.toml  quick_setup.bat  quick_setup.sh  requirements-dev.txt  requirements.txt  setup.bat  setup.py  test_connection.py  truenas_mcp_server.py  verify_build.sh  verify_fixes.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  tests.yml
Scripts/: activate  activate.bat
docs/: README.md  index.md  troubleshooting.md
docs/advanced/: caching.md  metrics.md
docs/ci-fixes/: COMPLETE_SUMMARY.md  README.md
docs/guides/: INSTALL.md  README.md
examples/: __init__.py  phase2_examples.py
tests/: __init__.py  conftest.py  debug_mcp.py  minimal_test.py  quick_test.py  simple_test.py  test_api_direct.py  test_import.py  test_mcp_import.py  test_phase2.py  test_virtualization_live.py
tests/integration/: __init__.py  test_end_to_end.py
tests/unit/: __init__.py  test_client.py  test_exceptions.py  test_settings.py
tests/unit/test_tools/: __init__.py  test_new_tools.py  test_storage.py
truenas_mcp_server/: __init__.py  exceptions.py  server.py
truenas_mcp_server/cache/: __init__.py  decorators.py  manager.py
truenas_mcp_server/client/: __init__.py  http_client.py
truenas_mcp_server/config/: __init__.py  settings.py
truenas_mcp_server/metrics/: __init__.py  collector.py  decorators.py
truenas_mcp_server/models/: __init__.py  app.py  base.py  instance.py  sharing.py  storage.py  user.py  vm.py
truenas_mcp_server/rate_limit/: __init__.py  decorators.py  limiter.py
truenas_mcp_server/resilience/: __init__.py  circuit_breaker.py  retry.py
truenas_mcp_server/security/: __init__.py  audit.py  validation.py
truenas_mcp_server/tools/: __init__.py  apps.py  base.py  debug.py  disks.py  groups.py  instances.py  network.py  replication.py  sharing.py  snapshots.py  storage.py  system.py  users.py  vms.py
utils/: setup.sh  test_api_auth.sh
